--- a/e2e-tests/Containerfile
+++ b/e2e-tests/Containerfile
@@ -9,12 +9,18 @@ RUN wget "https://github.com/sigstore/cosign/releases/download/v2.4.0/cosign-lin
 
 USER node:0
 
-COPY --chown=node:root --chmod=775 . /tmp/e2e
-RUN chmod -R 775 /tmp/e2e
+COPY --chown=node:root --chmod=775 package.json yarn.lock /tmp/e2e/
 
 RUN cd /tmp/e2e && \
     umask 0002 && \
-    npm i && \
+    yarn install --frozen-lockfile && \
+    yarn cache clean
+
+COPY --chown=node:root --chmod=775 . /tmp/e2e
+RUN chmod -R 775 /tmp/e2e
+
+# Install Cypress and set up directories
+RUN cd /tmp/e2e && \
     node_modules/.bin/cypress install && \
     mkdir -p /tmp/artifacts && \
     chmod -R a+rwx /tmp/artifacts ${CYPRESS_CACHE_FOLDER}
