--- a/e2e-tests/Containerfile
+++ b/e2e-tests/Containerfile
@@ -3,13 +3,16 @@ FROM quay.io/konflux_ui_qe/konflux-ui-tests-base:5.8.0
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
     install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
-RUN wget "https://github.com/sigstore/cosign/releases/download/v2.4.0/cosign-linux-amd64" && \
+RUN wget "https://github.com/sigstore/cosign/releases/download/v2.6.1/cosign-linux-amd64" && \
     mv cosign-linux-amd64 /usr/local/bin/cosign && \
     chmod +x /usr/local/bin/cosign
 
+# Install yarn globally (as root before switching users)
+RUN npm install -g yarn
+
 USER node:0
 
-COPY --chown=node:root --chmod=775 package.json yarn.lock /tmp/e2e/
+COPY --chown=node:root --chmod=755 package.json yarn.lock /tmp/e2e/
 
 RUN cd /tmp/e2e && \
     umask 0002 && \
